Fixed some spacing of elements

--- a/css/films.css
+++ b/css/films.css
@@ -33,7 +33,7 @@
 }
 
 .film-element {
-  margin-top: 40px;
+  margin-top: 30px;
   box-sizing: border-box;
   box-shadow: 0 0 5px 0 #706f6f47;
   padding: 16px;
@@ -89,7 +89,6 @@
 
   .film-element {
     flex-basis: 31.333333%;
-    margin-bottom: 30px;
     position: relative;
   }
 
